# ufde-next

./: .gitignore  .gitmodules  README.md  editor.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: build-macos-sidecars.sh  (+2 more)
src/: App.css  (+5 more)
src-tauri/: Cargo.toml  qt.conf  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/ip-tools/: Cargo.toml
src-tauri/ip-tools/src/: lib.rs
src-tauri/macos-libs/: libQt5DBus.5.dylib  libQt5Gui.5.dylib  libQt5PrintSupport.5.dylib  libboost_atomic.dylib  libboost_chrono.dylib  libboost_container.dylib  libboost_date_time.dylib  libboost_filesystem.dylib  libboost_program_options.dylib  libboost_thread.dylib  libicui18n.73.dylib  libicuuc.73.dylib  libpng16.16.dylib  libz.1.dylib  libzstd.1.dylib
src-tauri/resource/edalib/: MAPPING_SIMLIB.v  PACKING_SIMLIB.v  PACKING_SIMLIB_FDP3P7.v  ROUTING_SIMLIB_FDP3P7.v  custom_simlib.v  fde_dc.db  run_dc.tcl
src-tauri/resource/hw_lib/: dc_cell.db  dc_cell.xml  enc_libs.py  fdp1000k_arch.db  fdp1000k_arch.xml  fdp1000k_cil.db  fdp1000k_cil.xml  fdp1000k_con.db  fdp1000k_con.xml  fdp1000k_dly.db  fdp1000k_dly.xml  fdp3_100_arch_gsb.db  fdp3_100_arch_gsb.xml  fdp3_100_cil_gsb.db  fdp3_100_cil_gsb.xml  fdp3_300_cb228_arch_gsb.db  fdp3_300_cb228_arch_gsb.xml  fdp3_cell.db  fdp3_cell_lib.xml  fdp3_cfg.db  fdp3_cfg.xml  fdp3_con.db  fdp3_con.xml  fdp3_config.db  fdp3_config.xml  fdp3_dcplib.db  fdp3_dcplib.xml  fdp3p7_arch.db  fdp3p7_arch.xml  fdp3p7_cil.db  fdp3p7_cil.xml  fdp3p7_con.db  fdp3p7_con.xml  fdp3p7_dly.db  fdp3p7_dly.xml  fdp4_500_arch.db  fdp4_500_cil.db  fdp4_500_cil.xml  fdp4_80_arch.db  fdp4_80_cil.db  (+19 more)
src-tauri/resource/yosys/: fde_dc.lib  fdesimlib.v  yosys_fde.tcl
src-tauri/share/fde/: cells_map.v  techmap.v
src-tauri/src/: main.rs  modelsim.rs
src-tauri/src/vlfd/: cfg.rs  constants.rs  device_error.rs  device_handler.rs  mod.rs  program_handler.rs  serial.rs  usb_handler.rs
(+31 files in other folders)
