[package]
name = "ufde-plus"
version = "1.1.0"
description = "Unified Fudan Development Kit"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6.5", features = [ "os-all", "shell-all", "window-all", "path-all", "fs-read-dir", "fs-write-file", "fs-read-file", "fs-exists", "fs-create-dir", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libusb1-sys = "0.6.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
